# packages/chat-server/swagger.json
@@ -287,7 +287,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "properties": {}
+                  "properties": {
+                    "session-id": {
+                      "type": "string"
+                    }
+                  }
                 }
               }
             }
